--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
 </head>
 <body>
 <div id="question">Loading... </div>
-<!--<script type="text/javascript" src="http://requirejs.org/docs/release/2.1.22/minified/require.js"></script>-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-<script type="text/javascript" src="node_modules/mustache/mustache.js"></script>
-<script type="text/javascript" src="app/utils/MustacheUtils.js"></script>
-<script type="text/javascript" src="app/model/Question.js"></script>
-<script type="text/javascript" src="app/Application.js"></script>
+<script type="text/javascript" src="app/libs/vue.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+
 </body>
 
 
